Fin de practica2.02 DWC

--- a/DIW/Practica1/index.html
+++ b/DIW/Practica1/index.html
@@ -1,27 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
-    
+
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Es una página que se dedica a ilustres y famosos de manera campechana.">
     <title>Bob Dylan premio Nobel de Literatura.</title>
-    <link rel="stylesheet" href="./css/index.css">
-   
+    <link rel="stylesheet" href="./css/style.css">
+
 </head>
 
 <body>
-    <header>
-  
+    <header id="header-index">
+
         <h1><a href="#">Letras</a></h1>
         <nav>
             <ul>
-                <li><a href="index.html" >Bob Dylan, premio Nobel de literatura. 2016</a></li>
-                <li><a href="listado-nobel-literatura.html"  >Premios Nobel de literatura (2013-2022).</a></li>
-                <li><a href="motivacion-premios.html" >Motivación de los premios (2013-2022).</a></li>
+                <li><a class="bold" href="index.html">Bob Dylan, premio Nobel de literatura. 2016</a></li>
+                <li><a href="listado-nobel-literatura.html">Premios Nobel de literatura (2013-2022).</a>
+                </li>
+                <li><a href="motivacion-premios.html">Motivación de los premios (2013-2022).</a></li>
             </ul>
         </nav>
-  
+    </header>
+    <main>
         <article>
             <section id="name-awarded">
                 <h2>Bob Dylan, Premio Nobel de Literatura</h2>
@@ -61,17 +64,18 @@
                 </p>
             </section>
         </article>
-    </header>
 
 
-    <main>
+
+
         <article>
             <section>
                 <h2>El mito de la canción protesta</h2>
                 <p>
                     Hay un gran malentendido popular sobre Bob Dylan. Es víctima del cliché de la canción protesta, como
                     John Lennon lo
-                    es del cliché de paz, amor y flores que supuestamente representa Imagine. Pero Dylan no ha sido
+                    es del cliché de paz, amor y flores que supuestamente representa <cite>Imagine</cite>. Pero Dylan no
+                    ha sido
                     nunca un agitador:
                     cuenta historias o expone estados de conciencia.
                 </p>
@@ -174,43 +178,74 @@
             </section>
             <section>
                 <h2>Poesía y/o canción</h2>
-                <p lang="en">[…] Our songs are alive in the land of the living. But songs are unlike literature. They’re meant to be sung, not read.
-                    The words in Shakespeare’s plays were meant to be acted on the stage. Just as lyrics in songs are meant to be sung, not
-                    read on a page. And I hope some of you get the chance to listen to these lyrics the way they were intended to be heard:
-                    in concert or on record or however people are listening to songs these days. I return once again to Homer, who says,
-                    "Sing in me, oh Muse, and through me tell the story".
-                </p>
-                    <p>
-                        <em>Bob Dylan. Discurso de aceptación del premio Nobel de literatura</em>
+                <blockquote>
+                    <p lang="en">[…] Our songs are alive in the land of the living. But songs are unlike literature.
+                        They’re
+                        meant to be sung, not read.
+                        The words in Shakespeare’s plays were meant to be acted on the stage. Just as lyrics in songs
+                        are
+                        meant to be sung, not
+                        read on a page. And I hope some of you get the chance to listen to these lyrics the way they
+                        were
+                        intended to be heard:
+                        in concert or on record or however people are listening to songs these days. I return once again
+                        to
+                        Homer, who says,
+                        <q> "Sing in me, oh Muse, and through me tell the story".</q>
                     </p>
+                </blockquote>
+                <p>
+                    <em>Bob Dylan. Discurso de aceptación del premio Nobel de literatura</em>
+                </p>
             </section>
             <section id="desenlace">
-                <p>Pero volvamos al origen de la polémica. Lo que hace Dylan, ¿es literatura? Es decir, ¿es poesía? No lo sé. Tiendo a
-                    pensar que textos como los que nos ocupan, bien son un poema, bien son una canción, pero son cosas diferentes, en
-                    suma. La diferencia puede radicar en que un poema se aguanta solo, sin música, y el texto de una canción no. Las letras
-                    de Dylan, ¿son poesía simplemente leídas? Lo podéis juzgar vosotros mismos en estos magníficos <a href="#" rel="noopener noreferrer">fragmentos de
-                        canciones de Dylan</a>   elegidos por Lluís Gavaldà y publicados en la revista Catorze. A mí estos versos me transmiten y
-                    causan emociones, algo que, como simple lector, diría que es la función de la poesía. Pero no sé si lo hacen porque antes
-                    los he oído muchas veces cantados y, por tanto, cuando los leo la canción me resuena en la cabeza.</p>
-                <p>En cambio, para introducir una comparación relevante, la mayoría de las letras de Leonard Cohen funcionan
-                    perfectamente sobre el papel, sin ser cantadas. Tampoco es de extrañar, porque de hecho muchas provienen de sus libros
-                    de poesía y han sido musicadas posteriormente. Tal vez, Cohen es un poeta (que pone música a sus versos) y Dylan es
-                    un autor de canciones (con calidad poética). Es una diferencia notable que, sin duda, descansa en la identificación de la
+                <p>Pero volvamos al origen de la polémica. Lo que hace Dylan, ¿es literatura? Es decir, ¿es poesía? No
+                    lo sé. Tiendo a
+                    pensar que textos como los que nos ocupan, bien son un poema, bien son una canción, pero son cosas
+                    diferentes, en
+                    suma. La diferencia puede radicar en que un poema se aguanta solo, sin música, y el texto de una
+                    canción no. Las letras
+                    de Dylan, ¿son poesía simplemente leídas? Lo podéis juzgar vosotros mismos en estos magníficos <a
+                        href="#" rel="noopener noreferrer">fragmentos de
+                        canciones de Dylan</a> elegidos por Lluís Gavaldà y publicados en la revista Catorze. A mí estos
+                    versos me transmiten y
+                    causan emociones, algo que, como simple lector, diría que es la función de la poesía. Pero no sé si
+                    lo hacen porque antes
+                    los he oído muchas veces cantados y, por tanto, cuando los leo la canción me resuena en la cabeza.
+                </p>
+                <p>En cambio, para introducir una comparación relevante, la mayoría de las letras de Leonard Cohen
+                    funcionan
+                    perfectamente sobre el papel, sin ser cantadas. Tampoco es de extrañar, porque de hecho muchas
+                    provienen de sus libros
+                    de poesía y han sido musicadas posteriormente. Tal vez, Cohen es un poeta (que pone música a sus
+                    versos) y Dylan es
+                    un autor de canciones (con calidad poética). Es una diferencia notable que, sin duda, descansa en la
+                    identificación de la
                     poesía con el texto escrito.</p>
-                <p>Pero debemos tener en cuenta que el origen de la poesía, desde la antigüedad clásica y los trovadores, es la oralidad;
-                    más concretamente la recitación musicada ante un público. Y eso es lo que hace Dylan, ni más ni menos. Quizá
-                    podemos pensar entonces que el arte de Bob Dylan no hace más que devolver la poesía en casa, a sus orígenes
+                <p>Pero debemos tener en cuenta que el origen de la poesía, desde la antigüedad clásica y los
+                    trovadores, es la oralidad;
+                    más concretamente la recitación musicada ante un público. Y eso es lo que hace Dylan, ni más ni
+                    menos. Quizá
+                    podemos pensar entonces que el arte de Bob Dylan no hace más que devolver la poesía en casa, a sus
+                    orígenes
                     naturales.</p>
-                <p>Así pues, ¿lo que hace Bob Dylan es poesía? Supongo que depende de cómo se defina la poesía. Tampoco es necesario
-                    que le preguntéis a él, puesto que no os lo dirá: Dylan nunca se explica, ni mucho menos hace interpretaciones del
-                    sentido de sus canciones… Dylan solo sube al escenario y canta. Planteémoslo de otro modo: Bob Dylan, ¿es un poeta?
-                    Dado que como cantante es justito y como músico simplemente correcto, si su impacto emocional en el receptor es tan
+                <p>Así pues, ¿lo que hace Bob Dylan es poesía? Supongo que depende de cómo se defina la poesía. Tampoco
+                    es necesario
+                    que le preguntéis a él, puesto que no os lo dirá: Dylan nunca se explica, ni mucho menos hace
+                    interpretaciones del
+                    sentido de sus canciones… Dylan solo sube al escenario y canta. Planteémoslo de otro modo: Bob
+                    Dylan, ¿es un poeta?
+                    Dado que como cantante es justito y como músico simplemente correcto, si su impacto emocional en el
+                    receptor es tan
                     intenso como todo el mundo reconoce, casi estamos obligados a decir que sí.</p>
-                <p>Por último, ¿hay poetas mejores y que, en consecuencia, se merecen mucho más el premio Nobel de literatura?
-                    Probablemente. Pero es difícil que, de pasada, hayan cambiado la naturaleza y la historia de un ámbito artístico
+                <p>Por último, ¿hay poetas mejores y que, en consecuencia, se merecen mucho más el premio Nobel de
+                    literatura?
+                    Probablemente. Pero es difícil que, de pasada, hayan cambiado la naturaleza y la historia de un
+                    ámbito artístico
                     completo, como ha hecho él con la canción popular.</p>
 
-                    <p><em>Climent, S. (17-10-2016). <span><a href="#">Bob Dylan, Premio Nobel de Literatura.</a></span>     </em></p>
+                <p><em>Climent, S. (17-10-2016). <span><a href="#">Bob Dylan, Premio Nobel de Literatura.</a></span>
+                    </em></p>
 
             </section>
         </article>
@@ -220,11 +255,11 @@
 
     </main>
     <footer>
-       <p>Avtividad realizada por Ramón Moreno Albert  Diseño de interfaces web</p>
+        <p>Avtividad realizada por Ramón Moreno Albert Diseño de interfaces web</p>
     </footer>
 
 </body>
-<script  src="./scripts/script.js"></script>
+
 
 
 
