Interfaces practica1  trabajando el index

--- a/DIW/Practica1/motivacion-premios.html
+++ b/DIW/Practica1/motivacion-premios.html
@@ -16,7 +16,7 @@
                 <li><a href="index.html">Bob Dylan, premio Nobel de literatura. 2016</a></li>
                 <li><a href="listado-nobel-literatura.html">Premios Nobel de literatura (2013-2022).</a>
                 </li>
-                <li><a class="bold" href="motivacion-premios.html">Motivación de los premios (2013-2022).</a></li>
+                <li><a id="nav-item-bold" href="motivacion-premios.html">Motivación de los premios (2013-2022).</a></li>
             </ul>
         </nav>
     </header>
