--- a/DIW/Practica1/listado-nobel-literatura.html
+++ b/DIW/Practica1/listado-nobel-literatura.html
@@ -14,7 +14,8 @@
         <nav>
             <ul>
                 <li><a href="index.html">Bob Dylan, premio Nobel de literatura. 2016</a></li>
-                <li><a class="bold" href="listado-nobel-literatura.html">Premios Nobel de literatura (2013-2022).</a>
+                <li><a id="nav-item-bold" href="listado-nobel-literatura.html">Premios Nobel de literatura
+                        (2013-2022).</a>
                 </li>
                 <li><a href="motivacion-premios.html">Motivación de los premios (2013-2022).</a></li>
             </ul>
