--- a/DIW/Practica1/motivacion-premios.html
+++ b/DIW/Practica1/motivacion-premios.html
@@ -1,26 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="./css/style.css">
-</head>
+    <link rel="stylesheet" href="./css/style.css" />
+  </head>
 
-<body>
+  <body>
     <header>
-        <h1><a href="#">Letras</a></h1>
-        <nav>
-            <ul>
-                <li><a href="index.html">Bob Dylan, premio Nobel de literatura. 2016</a></li>
-                <li><a href="listado-nobel-literatura.html">Premios Nobel de literatura (2013-2022).</a>
-                </li>
-                <li><a id="nav-item-bold" href="motivacion-premios.html">Motivación de los premios (2013-2022).</a></li>
-            </ul>
-        </nav>
+      <h1><a href="#">Letras</a></h1>
+      <nav>
+        <ul>
+          <li>
+            <a href="index.html">Bob Dylan, premio Nobel de literatura. 2016</a>
+          </li>
+          <li>
+            <a href="listado-nobel-literatura.html"
+              >Premios Nobel de literatura (2013-2022).</a
+            >
+          </li>
+          <li>
+            <a id="nav-item-bold" href="motivacion-premios.html"
+              >Motivación de los premios (2013-2022).</a
+            >
+          </li>
+        </ul>
+      </nav>
     </header>
-</body>
-
-
+    <main class="main-motivacion-premios">
+      <hgroup>
+        <h2>Motivación de los Premios Nobel de Literatura</h2>
+        <h3>Años: 2013 - 2022</h3>
+      </hgroup>
+      <dl>
+        <dt><a href="#">lli</a></dt>
+        <dd>Definición del término</dd>
+      </dl>
+    </main>
+    <footer>
+      <p>
+        Avtividad realizada por Ramón Moreno Albert Diseño de interfaces web
+      </p>
+    </footer>
+  </body>
 </html>
