--- a/DIW/Practica1/motivacion-premios.html
+++ b/DIW/Practica1/motivacion-premios.html
@@ -1,47 +1,98 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-    <link rel="stylesheet" href="./css/style.css" />
-  </head>
 
-  <body>
-    <header>
-      <h1><a href="#">Letras</a></h1>
-      <nav>
-        <ul>
-          <li>
-            <a href="index.html">Bob Dylan, premio Nobel de literatura. 2016</a>
-          </li>
-          <li>
-            <a href="listado-nobel-literatura.html"
-              >Premios Nobel de literatura (2013-2022).</a
-            >
-          </li>
-          <li>
-            <a id="nav-item-bold" href="motivacion-premios.html"
-              >Motivación de los premios (2013-2022).</a
-            >
-          </li>
-        </ul>
-      </nav>
-    </header>
-    <main class="main-motivacion-premios">
-      <hgroup>
-        <h2>Motivación de los Premios Nobel de Literatura</h2>
-        <h3>Años: 2013 - 2022</h3>
-      </hgroup>
-      <dl>
-        <dt><a href="#">lli</a></dt>
-        <dd>Definición del término</dd>
-      </dl>
-    </main>
-    <footer>
-      <p>
-        Avtividad realizada por Ramón Moreno Albert Diseño de interfaces web
-      </p>
-    </footer>
-  </body>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Document</title>
+  <link rel="stylesheet" href="./css/style.css" />
+</head>
+
+<body>
+  <header>
+    <h1><a href="#">Letras</a></h1>
+    <nav>
+      <ul>
+        <li>
+          <a href="index.html">Bob Dylan, premio Nobel de literatura. 2016</a>
+        </li>
+        <li>
+          <a href="listado-nobel-literatura.html">Premios Nobel de literatura (2013-2022).</a>
+        </li>
+        <li>
+          <a id="nav-item-bold" href="motivacion-premios.html">Motivación de los premios (2013-2022).</a>
+        </li>
+      </ul>
+    </nav>
+  </header>
+  <main class="main-motivacion-premios">
+    <hgroup class="cabecera-motivación-premios">
+      <h2>Motivación de los Premios Nobel de Literatura</h2>
+      <h3>Años: 2013 - 2022</h3>
+      <p>Ordenados por años de entrega</p>
+    </hgroup>
+    <dl class="lista-motivacion">
+      <dt><a href="https://www.nobelprize.org/prizes/literature/2013/munro/facts">Alice Munro</a></dt>
+      <dd><span class="lista-motivacion-ano">2013</span>: Alice Munro <em>&laquo;master of the contemporary short
+          story&raquo;</em></dd>
+      <dt><a href="https://www.nobelprize.org/prizes/literature/2014/modiano/facts/">Patrick Modiano</a></dt>
+      <dd><span class="lista-motivacion-ano">2014</span>: Patrick Modiano <em>&laquo;for the art of memory with which he
+          has
+          evoked
+          the most ungraspable human destinies and
+          uncovered the life-world of the occupation&raquo;</em></dd>
+      <dt><a href="https://www.nobelprize.org/prizes/literature/2015/alexievich/facts/">Svetlana Aleksievich</a></dt>
+      <dd><span class="lista-motivacion-ano">2015</span>: Svetlana Aleksievich <em>&laquo;for her polyphonic writings, a
+          monument
+          to suffering and courage in our time&raquo;</em></dd>
+      <dt><a href="https://www.nobelprize.org/prizes/literature/2016/dylan/facts/">Bob Dylan</a></dt>
+      <dd><span class="lista-motivacion-ano">2016</span>: Bob Dylan <em>&laquo;for having created new poetic expressions
+          within the
+          great American song tradition&raquo;</em></dd>
+      <dt><a href="https://www.nobelprize.org/prizes/literature/2017/ishiguro/facts/">Kazuo Ishiguro</a></dt>
+      <dd><span class="lista-motivacion-ano">2017</span>: Kazuo Ishiguro <em>&laquo;who, in novels of great emotional
+          force,
+          has
+          uncovered the abyss beneath our illusory
+          sense of
+          connection with the world&raquo;</em></dd>
+      <dt><a href="https://www.nobelprize.org/prizes/literature/2018/tokarczuk/facts/">Olga Tokarczuk</a></dt>
+      <dd><span class="lista-motivacion-ano">2018</span>: Olga Tokarczuk <em>&laquo;for a narrative imagination that
+          with
+          encyclopedic passion represents the crossing of
+          boundaries
+          as a form of life&raquo;</em></dd>
+      <dt><a href="https://www.nobelprize.org/prizes/literature/2019/handke/facts/]">Peter Handke</a></dt>
+      <dd><span class="lista-motivacion-ano">2019</span>: Peter Handke <em>&laquo;for an influential work that with
+          linguistic
+          ingenuity has explored the periphery and the
+          specificity
+          of human experience&raquo;</em></dd>
+      <dt><a href="https://www.nobelprize.org/prizes/literature/2020/gluck/facts/">Louise Glück</a></dt>
+      <dd><span class="lista-motivacion-ano">2020</span>: Louise Glück <em>&laquo;for her unmistakable poetic voice that
+          with
+          austere beauty makes individual existence
+          universal&raquo;</em></dd>
+      <dt><a href="https://www.nobelprize.org/prizes/literature/2021/gurnah/facts/">Abdulrazak Gurnah</a></dt>
+      <dd><span class="lista-motivacion-ano">2021</span>: Abdulrazak Gurnah <em>&laquo;for his uncompromising and
+          compassionate
+          penetration of the effects of colonialism and
+          the
+          fate of the refugee in the gulf between cultures and continents&raquo;</em></dd>
+      <dt><a href="https://www.nobelprize.org/prizes/literature/2017/ishiguro/facts/">Annie Ernaux</a></dt>
+      <dd><span class="lista-motivacion-ano">2022</span>: Annie Ernaux <em>&laquo;for the courage and clinical acuity
+          with
+          which
+          she uncovers the roots, estrangements and
+          collective
+          restraints of personal memory&raquo;</em></dd>
+    </dl>
+  </main>
+  <footer>
+    <p>
+      Avtividad realizada por Ramón Moreno Albert Diseño de interfaces web
+    </p>
+  </footer>
+</body>
+
 </html>
