practica1 diw validad pendiente documentar y gitpages

--- a/DIW/Practica1/motivacion-premios.html
+++ b/DIW/Practica1/motivacion-premios.html
@@ -4,13 +4,13 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Motivación premios</title>
   <link rel="stylesheet" href="./css/estilos.css">
 </head>
 
 <body>
   <header>
-    <h1><a href="#">Letras</a></h1>
+    <h1><a href="index.html">Letras</a></h1>
     <nav>
       <ul>
         <li>
