--- a/DIW/Practica1/listado-nobel-literatura.html
+++ b/DIW/Practica1/listado-nobel-literatura.html
@@ -4,13 +4,13 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Listado Nobel Literatura</title>
   <link rel="stylesheet" href="./css/estilos.css">
 </head>
 
 <body>
   <header>
-    <h1><a href="#">Letras</a></h1>
+    <h1><a href="index.html">Letras</a></h1>
     <nav>
       <ul>
         <li>
@@ -99,7 +99,7 @@
     <p>
       Avtividad realizada por Ramón Moreno Albert Diseño de interfaces web
     </p>
-    <p><a href="https://www.flaticon.es/iconos-gratis/opcion-de-chat"></a>&copy; Icono por th studio – Flaticon</p>
+    <p><a href="https://www.flaticon.es/iconos-gratis/opcion-de-chat">&copy; Icono por th studio – Flaticon</a></p>
   </footer>
 </body>
 
