practica1 diw validad pendiente documentar y gitpages

--- a/DIW/Practica1/index.html
+++ b/DIW/Practica1/index.html
@@ -28,7 +28,7 @@
   </header>
 
   <main class="main-index">
-    <article class="index-introduccion">
+    <article class="main-index__introduccion">
       <h2>Bob Dylan, Premio Nobel de Literatura</h2>
       <p id="descripcion-premio">
         La concesión del premio Nobel de literatura de este año a Robert A.
