continuo Ejercicio DOM

--- a/DWC/Practica3.02/ejercicio1/Ejercicio01.html
+++ b/DWC/Practica3.02/ejercicio1/Ejercicio01.html
@@ -11,6 +11,13 @@
     charset="UTF-8"></script>
   <link rel="stylesheet" crossorigin="anonymous"
     href="https://gc.kis.v2.scr.kaspersky-labs.com/E3E8934C-235A-4B0E-825A-35A08381A191/abn/main.css?attr=aHR0cHM6Ly9hdWxlcy5lZHUuZ3ZhLmVzL3NlbWlwcmVzZW5jaWFsL3BsdWdpbmZpbGUucGhwLzI5Mjc1MDIvbW9kX2Fzc2lnbi9pbnRyb2F0dGFjaG1lbnQvMC9FamVyY2ljaW8wMS5odG1sP2ZvcmNlZG93bmxvYWQ9MQ" />
+  <style>
+    .contenido-bolqueado {
+      color: red;
+      font-weight: bold;
+      font-style: italic;
+    }
+  </style>
 </head>
 
 <body>
@@ -58,6 +65,6 @@
     familiares.
   </p>
 </body>
-<script src="ejercicio1.js"></script>
+<script src="ejercicio01.js"></script>
 
 </html>
