terminada practica 3.2 cliente

--- a/DWC/Practica3.02/ejercicio1/Ejercicio01.html
+++ b/DWC/Practica3.02/ejercicio1/Ejercicio01.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Document</title>
+  <title>Ejercicio 1 Ramón Moreno Albert</title>
   <script type="text/javascript"
     src="https://gc.kis.v2.scr.kaspersky-labs.com/FD126C42-EBFA-4E12-B309-BB3FDD723AC1/main.js?attr=cgDFk_sgqIP1FTS4JkLetqqlHg1o5EUxDQSgD_ISZj_jUwkQHDTr-hh4tUj5TP9P0I94zBsvQii4ZGb4rGZQw_fDYM0-DHR1Ni0biBdF4Yo7YzPFzjlTYnCt_VT4vwnYurz4PDyWAJyZZH2NM9sY3fijHAHTxCw2n46eEKBPOjFbmCUwZwOFjNv2AwopQpw9"
     charset="UTF-8"></script>
