--- a/DWC/Practica3.02/ejercicio2/Ejercicio02.html
+++ b/DWC/Practica3.02/ejercicio2/Ejercicio02.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tabla dinámica</title>
+    <title>Tabla dinámica Ramón Moreno Albert</title>
     <style>
         body {
 
@@ -19,8 +19,6 @@
             margin: 0 auto;
             background-color: antiquewhite;
             height: 100vh;
-
-
         }
 
         .container h1 {
