--- a/DWC/Practica3.02/ejercicio3/Ejercicio3.html
+++ b/DWC/Practica3.02/ejercicio3/Ejercicio3.html
@@ -5,18 +5,108 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+
     <style>
+        body {
+            background-color: rgb(173, 170, 170);
+            width: 1260px;
+            margin: 0 auto;
+            padding: 0;
+            box-sizing: border-box;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            font-family: Verdana, Geneva, Tahoma, sans-serif;
+
+        }
+
+        .container {
+            width: 100%;
+            margin: 15px auto;
+            background-color: antiquewhite;
+            display: flex;
+            flex-direction: column;
+            justify-content: space-evenly;
+            gap: 3vh;
+            align-items: center;
+            border-radius: 15px;
+            box-shadow: 0px 8px 20px rgba(0, 0, 0, 0.2);
+        }
+
         .oculto {
-            display: none;
+            visibility: hidden;
+        }
+
+        .parrafos {
+            width: 80%;
+            padding: 20px;
+            border-radius: 10px;
+            color: white;
+            font-size: 1.5rem;
+            transition: all 0.3s ease;
+            text-align: center;
+            cursor: pointer;
+        }
+
+        .parrafos:hover {
+            transform: scale(1.05);
+            box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.3);
         }
 
         #p1 {
             background-color: red;
         }
+
+        #p2 {
+            background-color: blue;
+        }
+
+        #p3 {
+            background-color: orange;
+        }
+
+        #p4 {
+            background-color: yellow;
+            color: black;
+        }
+
+        #p5 {
+            background-color: darkslateblue;
+        }
+
+        header {
+            background-color: rgb(5, 38, 38);
+            color: whitesmoke;
+            width: 90%;
+            text-align: center;
+
+            font-size: 2rem;
+            border-radius: 7px;
+            margin-top: 14px;
+        }
+
+        .boton {
+            background-color: rgb(88, 88, 242);
+            border: none;
+            border-radius: 7px;
+            width: 200px;
+            padding: 16px;
+        }
+
+        .boton:hover {
+            transform: scale(1.05);
+            box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.3);
+            cursor: pointer;
+        }
     </style>
 </head>
 
 <body>
+    <header>
+        <h1>Ejercicio 3: Ocultar DOM</h1>
+    </header>
+
     <div class="container">
         <p id="p1" class="parrafos"></p>
         <p id="p2" class="parrafos"></p>
