gestor tareas finalizado

--- a/DWC/Practica3.03/index.html
+++ b/DWC/Practica3.03/index.html
@@ -23,7 +23,7 @@
 
         </div>
         <div class="main__listas">
-            <div id="div-todo" class="main__listas-todo">
+            <div id="div-todo">
                 <h2>Pendientes</h2>
             </div>
             <div id="div-do">
