Practica 1 DIW documentada y entregada

--- a/DIW/Practica1/motivacion-premios.html
+++ b/DIW/Practica1/motivacion-premios.html
@@ -34,8 +34,7 @@
     <dl class="lista-motivacion">
       <dt id="alicemunro"><a href="https://www.nobelprize.org/prizes/literature/2013/munro/facts">Alice Munro</a></dt>
       <dd><span class="lista-motivacion-ano">2013</span>: Alice Munro <em lang="en">&laquo;master of the contemporary
-          short
-          story&raquo;</em></dd>
+          short story&raquo;</em></dd>
       <dt id="patrickmodiano"><a href="https://www.nobelprize.org/prizes/literature/2014/modiano/facts/">Patrick
           Modiano</a></dt>
       <dd><span class="lista-motivacion-ano">2014</span>: Patrick Modiano <em lang="en">&laquo;for the art of memory
@@ -62,8 +61,7 @@
           connection with the world&raquo;</em></dd>
       <dt id="olga"><a href="https://www.nobelprize.org/prizes/literature/2018/tokarczuk/facts/">Olga Tokarczuk</a></dt>
       <dd><span class="lista-motivacion-ano">2018</span>: Olga Tokarczuk<em lang="en">&laquo;for a narrative imagination
-          that
-          with
+          that with
           encyclopedic passion represents the crossing of
           boundaries
           as a form of life&raquo;</em></dd>
@@ -100,8 +98,8 @@
           in Literature </a></p>
     </div>
   </main>
-  <footer>
 
+  <footer>
     <p>
       Avtividad realizada por Ramón Moreno Albert Diseño de interfaces web
     </p>
