finalizada pracrica eventos cliente

--- a/DWC/Practica4.01/ejercicio5/ejercicio5.html
+++ b/DWC/Practica4.01/ejercicio5/ejercicio5.html
@@ -13,12 +13,20 @@
 </head>
 
 <body>
-    <div>
+    <div id="contenedor-papelera">
         <img id="papelera" src="./vacia.png" alt="">
+
     </div>
 
-    <div>
-        <img id="papel" src="./papel.jpg" alt="">
+    <div id="contenedor-papel">
+        <div>
+            <h2>papel tirable</h2>
+            <img id="papel" src="./papel.jpg" alt="">
+        </div>
+        <div>
+            <h2>papel no tirable</h2>
+            <img id="p" src="./papel.jpg" alt="">
+        </div>
     </div>
 </body>
 <script type="module" src="./ejercicio5.js"></script>
