--- a/DWC/Practica4.03/index.html
+++ b/DWC/Practica4.03/index.html
@@ -27,6 +27,9 @@
         <div id="lienzo">
 
         </div>
+        <div id="btn-reset">
+            <button id="reset">RESEST</button>
+        </div>
     </main>
     <footer>
         <p>Actividad realizada por Ramón Moreno Albert</p>
