Continúo con interfaces

--- a/DIW/Practica2/cursos.html
+++ b/DIW/Practica2/cursos.html
@@ -1,10 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-    <link rel="stylesheet" href="./css/estilos.css">
-  </head>
-  <body></body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="./css/estilos.css">
+  <link rel="icon" href="./img/favicon-32x32.png" type="image/x-icon">
+  <link rel="stylesheet" href="./css/estilos.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@1,300&family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap"
+    rel="stylesheet">
+
+  <title>Qué es la cerámica</title>
+</head>
+
+<body class="body-cursos">
+  <header class="cursos-header">
+    <nav class="cursos-header__barnav">
+      <figure class="cursos-header__figure">
+        <img class="cursos-header__img" src="./img/isologo-taller.png" alt="Logtotipo de la empresa">
+        <h1 class="cursos-header__titulo">El taller</h1>
+      </figure>
+      <ul class="cursos-header__lista">
+        <li><a href="./que-es-la-ceramica.html">CERÁMICA</a> </li>
+        <li><a id="cursos-header__lista__activo" href="#">CURSOS</a> </li>
+        <li><a href="#">INSCRIPCIÓN</a></li>
+      </ul>
+    </nav>
+  </header>
+
+</body>
+
 </html>
