--- a/DIW/Practica2/index.html
+++ b/DIW/Practica2/index.html
@@ -11,15 +11,15 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@1,300&family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap"
     rel="stylesheet">
-  <title>Document</title>
+  <title>El taller</title>
 </head>
 
 <body class="body-index">
   <header class="index-header">
     <nav class="index-header__barnav">
       <ul class="index-header__lista">
-        <li><a href="#">CERÁMICA</a> </li>
-        <li><a href="#">CURSOS</a> </li>
+        <li><a href="./que-es-la-ceramica.html">CERÁMICA</a> </li>
+        <li><a href="./cursos.html">CURSOS</a> </li>
         <li><a href="#">INSCRIPCIÓN</a></li>
       </ul>
     </nav>
