Continúo con interfaces

--- a/DIW/Practica2/que-es-la-ceramica.html
+++ b/DIW/Practica2/que-es-la-ceramica.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
   <meta charset="UTF-8">
@@ -41,13 +41,13 @@
           terracota, de loza y del conjunto de porcelanas. Además de denominar la técnica y su actividad, también da
           nombre al
           conjunto de objetos y producción.</p>
-        <figure>
+        <figure class="ceramica-main__intro__figure">
           <iframe src="https://www.youtube.com/embed/teqrk5vitto?si=2IeWVA0SuVMPPjI5" allowfullscreen></iframe>
           <figcaption>El alfarero japonés Yuuka Matsuo, haciendo tazas de té</figcaption>
         </figure>
       </div>
       <section class="ceramica-main__section">
-        <h2 class="ceramica-main__sectio__titulo">Historia</h2>
+        <h2 class="ceramica-main__section__titulo">Historia</h2>
         <p class="ceramica-main-section__parrafo">La invención de la cerámica se produjo durante el neolítico, cuando se
           hicieron necesarios recipientes para almacenar el
           excedente de las cosechas producido por la práctica de la agricultura. En un principio esta cerámica se
@@ -104,9 +104,11 @@
           perdió la influencia islámica y se europeizó.</p>
       </section>
       <section class="ceramica-main__section">
-        <h2 class="ceramica-main__sectio__titulo">Utensilios</h2>
-        <p class="ceramica-main-section__parrafo">El torno y el horno son los elementos fundamentales e importantes para
-          la fabricación de la cerámica. Se necesita además pinceles y varillas para la decoración. Las principales
+        <h2 class="ceramica-main__section__titulo">Utensilios</h2>
+        <p class="ceramica-main-section__parrafo">El <strong>torno</strong> y el <strong>horno</strong> son los
+          elementos fundamentales e importantes para
+          la fabricación de la cerámica. Se necesita además <strong>pinceles</strong> y <strong>varillas</strong> para
+          la decoración. Las principales
           herramientas o utensilios son:</p>
         <ul class="ceramica-main__section__lista-utensilios">
           <li>Cortador de barro</li>
@@ -126,7 +128,7 @@
         </ul>
       </section>
       <section class="ceramica-main__section">
-        <h2 class="ceramica-main__sectio__titulo">Técnicas y materiales</h2>
+        <h2 class="ceramica-main__section__titulo">Técnicas y materiales</h2>
         <p class="ceramica-main-section__parrafo">Las distintas técnicas que se han ido utilizando han dado como
           resultado una gran variedad de acabados:</p>
         <dl class="ceramica-main__section__lista-tecnica-material">
@@ -166,6 +168,14 @@
 
     </article>
   </main>
+  <footer class="footer-ceramica-cursos-formulario">
+    <ul class="footer-ceramica-cursos-formulario__lista">
+      <li><a href="#" class="footer-ceramica-cursos-formulario__enlace">Aviso legal</a></li>
+      <li><a href="#" class="footer-ceramica-cursos-formulario__enlace">Política de privacidad</a></li>
+      <li><a href="#" class="footer-ceramica-cursos-formulario__enlace">Política de cookies</a></li>
+    </ul>
+    <p class="footer-ceramica-cursos-formulario__creditos">2024 &copy; Ramón Moreno Albert</p>
+  </footer>
 
 </body>
 
