inicio practica Cliente 4

--- a/DIW/Practica2/cursos.html
+++ b/DIW/Practica2/cursos.html
@@ -13,7 +13,7 @@
     href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@1,300&family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap"
     rel="stylesheet">
 
-  <title>Qué es la cerámica</title>
+  <title>Cusrsos Ceramica</title>
 </head>
 
 <body class="body-cursos">
@@ -30,6 +30,24 @@
       </ul>
     </nav>
   </header>
+  <main class="cursos-main contenedor-main">
+    <div class="cursos-main__cabecera">
+      <h1 class="cursos-main__cabecera__titulo">Cursos de cerámica<span>2023</span></h1>
+      <figure>
+        <img src="./img/cursos-ceramica.jpg" alt="Tranajos de alfarería">
+        <figcaption></figcaption>
+      </figure>
+    </div>
+
+  </main>
+  <footer class="footer-ceramica-cursos-formulario">
+    <ul class="footer-ceramica-cursos-formulario__lista">
+      <li><a href="#" class="footer-ceramica-cursos-formulario__enlace">Aviso legal</a></li>
+      <li><a href="#" class="footer-ceramica-cursos-formulario__enlace">Política de privacidad</a></li>
+      <li><a href="#" class="footer-ceramica-cursos-formulario__enlace">Política de cookies</a></li>
+    </ul>
+    <p class="footer-ceramica-cursos-formulario__creditos">2024 &copy; Ramón Moreno Albert</p>
+  </footer>
 
 </body>
 
