continúo con interfaces

--- a/DIW/Practica2/cursos.html
+++ b/DIW/Practica2/cursos.html
@@ -35,9 +35,64 @@
       <h1 class="cursos-main__cabecera__titulo">Cursos de cerámica<span>2023</span></h1>
       <figure>
         <img src="./img/cursos-ceramica.jpg" alt="Tranajos de alfarería">
-        <figcaption></figcaption>
+        <figcaption>&copy; Foto de <a target="_blank" href="https://unsplash.com/@courtneymcook">Courtney Cook</a> en
+          <a target="_blank" href="https://unsplash.com/es/fotos/jZLozXwxgbo">Unsplash</a>
+        </figcaption>
       </figure>
+      <hgroup>
+        <h2>Cursos de cerámica para todos los niveles.</h2>
+        <p>Artesanos expertos te guiarán para que aprendas el oficio y des
+          rienda suelta
+          a tu creatividad.
+        </p>
+      </hgroup>
     </div>
+    <table>
+      <h3>Programación de cursos</h3>
+      <thead>
+        <th>Cursos</th>
+        <th>Precio</th>
+        <th>Duración</th>
+        <th>Horario</th>
+      </thead>
+      <tbody>
+        <tr>
+          <td>Torno</td>
+          <td>150 €</td>
+          <td>4 horas</td>
+          <td>Un sábado al mes de 10 a 14h</td>
+        </tr>
+        <tr>
+          <td>Cerámica</td>
+          <td>100 €</td>
+          <td>4 horas</td>
+          <td>Jueves alternos de 19 a 21 h</td>
+        </tr>
+        <tr>
+          <td>Modelado</td>
+          <td>200 €</td>
+          <td>12 horas</td>
+          <td>Un miercoles al mes de 18 a 21 h</td>
+        </tr>
+        <tr>
+          <td>Esmaltes</td>
+          <td>250 €</td>
+          <td>16 horas</td>
+          <td>Martes y jueves de 19 a 21 h</td>
+        </tr>
+        <tr>
+          <td>Joyería cerámica</td>
+          <td>160 €</td>
+          <td>4 horas</td>
+          <td>Un sábado al mes de 10 a 14h</td>
+        </tr>
+      </tbody>
+      <tfoot>
+        <tr>
+          <td>Plazas limitadas a 15 alumnos por sesión</td>
+        </tr>
+      </tfoot>
+    </table>
 
   </main>
   <footer class="footer-ceramica-cursos-formulario">
