--- a/DIW/Practica2/que-es-la-ceramica.html
+++ b/DIW/Practica2/que-es-la-ceramica.html
@@ -20,8 +20,9 @@
   <header class="ceramica-header">
     <nav class="ceramica-header__barnav">
       <figure class="ceramica-header__figure">
-        <img class="ceramica-header__img" src="./img/isologo-taller.png" alt="Logtotipo de la empresa">
-        <h2 class="ceramica-header__titulo">El taller</h2>
+        <a href="./index.html"><img class="ceramica-header__img" src="./img/isologo-taller.png"
+            alt="Logtotipo de la empresa"></a>
+        <h2 class="ceramica-header__titulo"><a href="./index.html">El taller</a></h2>
       </figure>
       <ul class="ceramica-header__lista">
         <li><a id="ceramica-header__lista__activo" href="#">CERÁMICA</a> </li>
