--- a/DIW/Practica2/cursos.html
+++ b/DIW/Practica2/cursos.html
@@ -27,7 +27,7 @@
       <ul class="cursos-header__lista">
         <li><a href="./que-es-la-ceramica.html">CERÁMICA</a> </li>
         <li><a id="cursos-header__lista__activo" href="#">CURSOS</a> </li>
-        <li><a href="#">INSCRIPCIÓN</a></li>
+        <li><a href="./inscripcion-cursos.html">INSCRIPCIÓN</a></li>
       </ul>
     </nav>
   </header>
@@ -43,7 +43,7 @@
       </figure>
       <hgroup class="cursos-main__cabecera__hgroup">
         <h2 class="cursos-main__cabecera__hgroup__titulo">Cursos de cerámica para todos los niveles.</h2>
-        <p class="cursos-main__cabecera__hgroup__parrafpo">Artesanos expertos te guiarán para que aprendas el oficio y
+        <p class="cursos-main__cabecera__hgroup__parrafo">Artesanos expertos te guiarán para que aprendas el oficio y
           des
           rienda suelta
           a tu creatividad.
