--- a/DIW/Practica2/index.html
+++ b/DIW/Practica2/index.html
@@ -20,7 +20,7 @@
       <ul class="index-header__lista">
         <li><a href="./que-es-la-ceramica.html">CERÁMICA</a> </li>
         <li><a href="./cursos.html">CURSOS</a> </li>
-        <li><a href="#">INSCRIPCIÓN</a></li>
+        <li><a href="./inscripcion-cursos.html">INSCRIPCIÓN</a></li>
       </ul>
     </nav>
   </header>
