--- a/DIW/Practica2/que-es-la-ceramica.html
+++ b/DIW/Practica2/que-es-la-ceramica.html
@@ -27,7 +27,7 @@
       <ul class="ceramica-header__lista">
         <li><a id="ceramica-header__lista__activo" href="#">CERÁMICA</a> </li>
         <li><a href="./cursos.html">CURSOS</a> </li>
-        <li><a href="#">INSCRIPCIÓN</a></li>
+        <li><a href="./inscripcion-cursos.html">INSCRIPCIÓN</a></li>
       </ul>
     </nav>
   </header>
