--- a/DIW/Practica2/inscripcion-cursos.html
+++ b/DIW/Practica2/inscripcion-cursos.html
@@ -43,13 +43,13 @@
                     <div class="inscripcion-main__formulario__detalles__seccion">
                         <label class="inscripcion-main__formulario__label" for="nombre">Nombre *</label>
                         <input class="inscripcion-main__formulario__input" type="text" name="nombre" id="nombre"
-                            required minlength="2" maxlength="64" pattern="[A-Za-zñáéíóú-']+$"
+                            required minlength="2" maxlength="64" pattern="^[A-Za-zÀ-ÿ'\- ]+$"
                             title="Solo se pueden introducir letras de la a a la z en minúscula o mayusculas, apostrofes, guiones y tildes en la vocales">
                     </div>
                     <div class="inscripcion-main__formulario__detalles__seccion">
                         <label class="inscripcion-main__formulario__label" for="apellidos">Apellidos *</label>
                         <input class="inscripcion-main__formulario__input" type="text" name="apellidos" id="apellidos"
-                            required minlength="2" maxlength="128" pattern="[A-Za-zñáéíóú-']+$"
+                            required minlength="2" maxlength="128" pattern="^[A-Za-zÀ-ÿ'\- ]+$"
                             title="Solo se pueden introducir letras de la a a la z en minúscula o mayusculas, apostrofes, guiones y tildes en la vocales">
                     </div>
                     <div class="inscripcion-main__formulario__detalles__seccion">
